[package]
name = "jtd-fuzz"
description = "Generates example data from JSON Typedef schemas"
version = "0.1.0"
license = "MIT"
authors = ["JSON Typedef Contributors"]
edition = "2018"

[dependencies]
clap = "2.33"
jtd = "0.1.4"
serde_json = "1.0"
failure = "0.1"
rand = "0.7"
rand_pcg = "0.2"
chrono = "0.4"
