[package]
name = "jtd-fuzz"
description = "Generates example data from JSON Typedef schemas"
version = "0.2.0"
license = "MIT"
authors = ["JSON Typedef Contributors"]
edition = "2018"

[dependencies]
anyhow = "^1"
chrono = "^0.4"
clap = { version = "2.33.3", features = ["yaml"] }
faker_rand = "0.1"
jtd = "^0.3"
rand = "^0.8"
rand_pcg = "^0.3"
serde_json = "^1"
