[package]
name = "jtd_fuzz"
description = "Generates example data from JSON Typedef schemas"
version = "0.1.8"
license = "MIT"
authors = ["JSON Typedef Contributors"]
edition = "2018"

[dependencies]
jtd = "^0.1.4"
serde_json = "^1"
rand = "^0.7"
chrono = "^0.4"

[dev-dependencies]
rand_pcg = "^0.2"
